// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MoreDirectChannels should exclude deleted users if there is not direct channel between users 1`] = `
<Modal
  animation={true}
  aria-labelledby="moreDmModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal more-modal more-direct-channels"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="moreDmModal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onEntered={[Function]}
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="moreDmModalLabel"
    >
      <FormattedMessage
        defaultMessage="Direct Messages"
        id="more_direct_channels.title"
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
    role="application"
  >
    <MultiSelect
      ariaLabelRenderer={[Function]}
      buttonSubmitLoadingText="Loading.."
      buttonSubmitText="Go"
      handleAdd={[Function]}
      handleDelete={[Function]}
      handleInput={[Function]}
      handlePageChange={[Function]}
      handleSubmit={[Function]}
      key="moreDirectChannelsList"
      loading={true}
      maxValues={7}
      numRemainingText={
        <FormattedMessage
          defaultMessage="Use ↑↓ to browse, ↵ to select. You can add {num, number} more {num, plural, one {person} other {people}}. "
          id="multiselect.numPeopleRemaining"
          values={
            Object {
              "num": 7,
            }
          }
        />
      }
      optionRenderer={[Function]}
      options={
        Array [
          Object {
            "delete_at": 0,
            "id": "user_id_1",
            "label": "user_id_1",
            "value": "user_id_1",
          },
          Object {
            "delete_at": 0,
            "id": "user_id_2",
            "label": "user_id_2",
            "value": "user_id_2",
          },
          Object {
            "delete_at": 1,
            "id": "deleted_user_1",
            "label": "deleted_user_id_1",
            "value": "deleted_user_id_1",
          },
          Object {
            "delete_at": 1,
            "id": "deleted_user_2",
            "label": "deleted_user_id_2",
            "value": "deleted_user_id_2",
          },
        ]
      }
      perPage={50}
      placeholderText="Search and add members"
      saving={false}
      selectedItemRef={
        Object {
          "current": null,
        }
      }
      submitImmediatelyOn={[Function]}
      users={
        Array [
          Object {
            "delete_at": 0,
            "id": "user_id_1",
            "label": "user_id_1",
            "value": "user_id_1",
          },
          Object {
            "delete_at": 0,
            "id": "user_id_2",
            "label": "user_id_2",
            "value": "user_id_2",
          },
          Object {
            "delete_at": 1,
            "id": "deleted_user_1",
            "label": "deleted_user_id_1",
            "value": "deleted_user_id_1",
          },
          Object {
            "delete_at": 1,
            "id": "deleted_user_2",
            "label": "deleted_user_id_2",
            "value": "deleted_user_id_2",
          },
          Object {
            "delete_at": 1,
            "id": "deleted_user_3",
            "label": "deleted_user_id_3",
            "value": "deleted_user_id_3",
          },
        ]
      }
      valueRenderer={[Function]}
      values={Array []}
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    className="modal-footer--invisible"
    componentClass="div"
  >
    <button
      className="btn btn-link"
      id="closeModalButton"
      type="button"
    >
      <FormattedMessage
        defaultMessage="Close"
        id="general_button.close"
      />
    </button>
  </ModalFooter>
</Modal>
`;

exports[`components/MoreDirectChannels should match renderOption snapshot 1`] = `
<div
  className="more-modal__row clickable more-modal__row--selected"
  onClick={[Function]}
  onMouseMove={[Function]}
>
  <ProfilePicture
    hasMention={false}
    isEmoji={false}
    isRHS={false}
    size="md"
    src="/api/v4/users/user_id_1/image"
    status="online"
    wrapperClass=""
  />
  <div
    className="more-modal__details"
  >
    <div
      className="more-modal__name"
    >
      <span
        id="displayedUserNameusername1"
      >
        @username1
        <span
          className="light"
        >
          
        </span>
      </span>
      <BotBadge
        className="badge-popoverlist"
        show={false}
      />
      <GuestBadge
        className="badge-popoverlist"
        show={false}
      />
    </div>
    <div
      className="more-modal__description"
    />
  </div>
  <div
    className="more-modal__actions"
  >
    <div
      className="more-modal__actions--round"
    >
      <AddIcon />
    </div>
  </div>
</div>
`;

exports[`components/MoreDirectChannels should match snapshot 1`] = `
<Modal
  animation={true}
  aria-labelledby="moreDmModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal more-modal more-direct-channels"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="moreDmModal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onEntered={[Function]}
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="moreDmModalLabel"
    >
      <FormattedMessage
        defaultMessage="Direct Messages"
        id="more_direct_channels.title"
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
    role="application"
  >
    <MultiSelect
      ariaLabelRenderer={[Function]}
      buttonSubmitLoadingText="Loading.."
      buttonSubmitText="Go"
      handleAdd={[Function]}
      handleDelete={[Function]}
      handleInput={[Function]}
      handlePageChange={[Function]}
      handleSubmit={[Function]}
      key="moreDirectChannelsList"
      loading={true}
      maxValues={7}
      numRemainingText={
        <FormattedMessage
          defaultMessage="Use ↑↓ to browse, ↵ to select. You can add {num, number} more {num, plural, one {person} other {people}}. "
          id="multiselect.numPeopleRemaining"
          values={
            Object {
              "num": 5,
            }
          }
        />
      }
      optionRenderer={[Function]}
      options={
        Array [
          Object {
            "delete_at": 0,
            "id": "user_id_1",
            "label": "user_id_1",
            "value": "user_id_1",
          },
          Object {
            "delete_at": 0,
            "id": "user_id_2",
            "label": "user_id_2",
            "value": "user_id_2",
          },
          Object {
            "delete_at": 0,
            "id": "user_id_3",
            "label": "user_id_3",
            "value": "user_id_3",
          },
        ]
      }
      perPage={50}
      placeholderText="Search and add members"
      saving={false}
      selectedItemRef={
        Object {
          "current": null,
        }
      }
      submitImmediatelyOn={[Function]}
      users={
        Array [
          Object {
            "delete_at": 0,
            "id": "user_id_1",
            "label": "user_id_1",
            "value": "user_id_1",
          },
          Object {
            "delete_at": 0,
            "id": "user_id_2",
            "label": "user_id_2",
            "value": "user_id_2",
          },
          Object {
            "delete_at": 0,
            "id": "user_id_3",
            "label": "user_id_3",
            "value": "user_id_3",
          },
        ]
      }
      valueRenderer={[Function]}
      values={
        Array [
          Object {
            "id": "user_id_1",
            "label": "user_id_1",
            "value": "user_id_1",
          },
          Object {
            "id": "user_id_2",
            "label": "user_id_2",
            "value": "user_id_2",
          },
        ]
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    className="modal-footer--invisible"
    componentClass="div"
  >
    <button
      className="btn btn-link"
      id="closeModalButton"
      type="button"
    >
      <FormattedMessage
        defaultMessage="Close"
        id="general_button.close"
      />
    </button>
  </ModalFooter>
</Modal>
`;

exports[`components/MoreDirectChannels should render the group channel option 1`] = `
<GroupMessageOption
  channel={
    Object {
      "profiles": Array [
        Object {
          "id": "user_id_2",
          "username": "username",
        },
      ],
      "type": "G",
    }
  }
  isSelected={false}
  onAdd={[Function]}
  selectedItemRef={
    Object {
      "current": null,
    }
  }
/>
`;
